<resources>
    <string name="app_name">ToGet</string>
    <string name="description_optional">Description (optional)</string>
    <string name="title">Title</string>
    <string name="high">High</string>
    <string name="save">Save</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="quantity">Quantity</string>
    <string name="priority">Priority</string>
    <string name="category">Category</string>
    <string name="sort_order">Sort Order</string>
    <string name="sort">Sort</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
</resources>