<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:clipChildren="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/title"
            android:textColorHint="?attr/colorOnPrimary"
            app:boxBackgroundColor="?attr/colorOnPrimarySurface"
            app:boxStrokeColor="?attr/colorOnPrimary"
            app:endIconMode="clear_text"
            app:hintTextColor="?attr/colorOnPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/description_optional"
            android:textColorHint="?attr/colorOnPrimary"
            app:boxBackgroundColor="?attr/colorOnPrimarySurface"
            app:boxStrokeColor="?attr/colorOnPrimary"
            app:endIconMode="clear_text"
            app:hintTextColor="?attr/colorOnPrimary"
            app:layout_constraintStart_toStartOf="@id/titleTextField"
            app:layout_constraintTop_toBottomOf="@id/titleTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:checkedButton="@id/lowPriorityBtn"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionTextField">

            <RadioButton
                android:id="@+id/lowPriorityBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/low" />

            <RadioButton
                android:id="@+id/mediumPriorityBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/medium" />

            <RadioButton
                android:id="@+id/highPriorityBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/high" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/save"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constraintEnd_toEndOf="@id/titleTextField"
            app:layout_constraintTop_toBottomOf="@id/radioGroup" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>